objects/Project_User__c.object
<CustomObject>
    <label>Project User</label>
    <nameField>
        <label>Project User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Project Users</relationshipLabel>
        <relationshipName>Project_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <formula>if( Active__c,1,2)+
if( ISPICKVAL( Project_Role__c , &quot;admin&quot;),0.1,0)+
if( ISPICKVAL(Project_Role__c, &quot;editor&quot;),0.2,0)+
if( ISPICKVAL(Project_Role__c, &quot;contributor&quot;),0.3,0)+
if( ISPICKVAL(Project_Role__c, &quot;viewer&quot;),0.3,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Users</relationshipLabel>
        <relationshipName>Project_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Users</relationshipLabel>
        <relationshipName>Project_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_MRR__c</fullName>
        <formula>Project__r.Chartmogul_MRR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test - MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>Job title pulled from the Contact object field Title</description>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Job title pulled from the Contact object field Title</inlineHelpText>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB_User_ID__c</fullName>
        <formula>Contact__r.User_PB_ID__c</formula>
        <inlineHelpText>Project User PB ID from Contact</inlineHelpText>
        <label>PB User ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>User Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <label>User Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Editor__c</fullName>
        <formula>if( Active__c, OR(Project__c = &apos;admin&apos;,Project__c = &apos;editor&apos;),FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin/Editor?_Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Role__c</fullName>
        <label>Project Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>admin</fullName>
                </value>
                <value>
                    <fullName>editor</fullName>
                </value>
                <value>
                    <fullName>contributor</fullName>
                </value>
                <value>
                    <fullName>viewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Account__c</fullName>
        <formula>Contact__r.Account.Id =  Project__r.Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks if the project Account Id is the same a Contact account id</inlineHelpText>
        <label>Check Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_PB_ID__c</fullName>
        <formula>Project__r.Project_PB_ID__c</formula>
        <inlineHelpText>Project Productboard ID</inlineHelpText>
        <label>Project PB ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <formula>Project__r.Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB_Account_Name__c</fullName>
        <label>PB Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Added_Date__c</fullName>
        <label>User Added Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Not_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Not Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trial_Usage_Score__c</fullName>
        <formula>Lead__r.Trial_Usage_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial Usage Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Removed_Date__c</fullName>
        <label>User Removed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Address_Check__c</fullName>
        <formula>Name =  Contact__r.Email</formula>
        <inlineHelpText>Does project user name match email address for the contact</inlineHelpText>
        <label>Email Address Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PB_Account_Searched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PB Account Searched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReferencableContact__c</fullName>
        <formula>Contact__r.Referencable__c</formula>
        <label>Referencable Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vitally_Referencable__c</fullName>
        <label>Vitally_Referencable?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Backend_Stage__c</fullName>
        <description>Lookup to the project current backend stage</description>
        <formula>Project__r.Current_Backend_Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lookup to the project current backend stage</inlineHelpText>
        <label>Project Backend Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_User_Full_Name__c</fullName>
        <description>Full Name from the Contact</description>
        <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Full Name from the Contact</inlineHelpText>
        <label>Project User Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemAccScriptUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SystemAccScriptUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_members_counter__c</fullName>
        <formula>Contact__r.Community_members_counter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community members counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Chartmogul_Plan_Type__c</fullName>
        <formula>Project__r.Chartmogul_Plan_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Chartmogul Plan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Survey_Score_Project_User__c</fullName>
        <description>Pulled automatically from the Contact object - Value Survey Score field</description>
        <formula>Contact__r.Value_Survey_Score__c</formula>
        <inlineHelpText>Pulled automatically from the Contact object - Value Survey Score field</inlineHelpText>
        <label>Value Survey Score Project User</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project__c</columns>
        <columns>Master_User__c</columns>
        <columns>Contact__c</columns>
        <columns>User_Status__c</columns>
        <columns>Project_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>